--- a/script_1_Web_scraping.ipynb
+++ b/script_1_Web_scraping.ipynb
@@ -1,129 +1,350 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "script 1 Web scraping",
-      "provenance": [],
-      "authorship_tag": "ABX9TyPz2cQjs+1EyD8x7yXNYLX1",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<selenium.webdriver.remote.webelement.WebElement (session=\"2a822a16fa380bec995067871f22777d\", element=\"0.7088872403465725-1\")>\n"
+     ]
     }
+   ],
+   "source": [
+    "####\n",
+    "#Author: Daniel Strauss\n",
+    "#version 1.0\n",
+    "#references: \n",
+    "#https://www.programiz.com/python-programming/working-csv-files\n",
+    "#https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/s3.html#S3.Client.create_bucket\n",
+    "#https://realpython.com/python-boto3-aws-s3/\n",
+    "#CLI aws s3api create-bucket --bucket my-bucket-name --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2\n",
+    "#https://robertorocha.info/setting-up-a-selenium-web-scraper-on-aws-lambda-with-python/ \n",
+    "##\n",
+    "\n",
+    "###Load libraries\n",
+    "import awscli\n",
+    "import selenium\n",
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "\n",
+    "####SCRAPE THE WEBSITE######\n",
+    "###call the webdriver\n",
+    "browser = webdriver.Chrome(\"C:\\Windows/chromedriver.exe\")\n",
+    "\n",
+    "#Path that needs to be accessed by webdriver\n",
+    "browser.get('https://www.charitiesnys.com/RegistrySearch/search_charities.jsp')\n",
+    "\n",
+    "#identify xpath of location to select element\n",
+    "inputElement = browser.find_element_by_xpath(\"/html/body/div/div[2]/div/table/tbody/tr/td[2]/div/div/font/font/font/font/font/font/table/tbody/tr[4]/td/form/table/tbody/tr[2]/td[2]/input[1]\")\n",
+    "inputElement.send_keys('0')\n",
+    "inputElement1 = browser.find_element_by_xpath(\"/html/body/div/div[2]/div/table/tbody/tr/td[2]/div/div/font/font/font/font/font/font/table/tbody/tr[4]/td/form/table/tbody/tr[10]/td/input[1]\").click()\n",
+    "\n",
+    "#identify the table to scrape\n",
+    "table = browser.find_element_by_css_selector('table.Bordered')\n",
+    "\n",
+    "print(table)\n"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Danjstr/M10_webscraper_assignment/blob/main/script_1_Web_scraping.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Organization Name</th>\n",
+       "      <th>NY Reg #</th>\n",
+       "      <th>EIN</th>\n",
+       "      <th>Registrant Type</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"Studio 5404\" Inc.</td>\n",
+       "      <td>44-39-58</td>\n",
+       "      <td>463180470</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>MASSAPAQUA</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"THEY ARE HAITIAN\" FUND, INC.</td>\n",
+       "      <td>20-63-46</td>\n",
+       "      <td>300170128</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>HUDSON</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(ASMA) American Syrian Multicultural Associati...</td>\n",
+       "      <td>42-84-63</td>\n",
+       "      <td>273130182</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>#HicksStrong Inc.</td>\n",
+       "      <td>48-10-48</td>\n",
+       "      <td>842612081</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>CLIFTON PARK</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>#WalkAway Foundation</td>\n",
+       "      <td>47-15-80</td>\n",
+       "      <td>832820906</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>CARLSBAD</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>04/11 10:17 PM test</td>\n",
+       "      <td>47-13-95</td>\n",
+       "      <td>206256427</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>ALBANY</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/20/21 Action Fund</td>\n",
+       "      <td>46-99-13</td>\n",
+       "      <td>832210730</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>SAN FRANCISCO</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10/40 Connections, Inc.</td>\n",
+       "      <td>45-70-15</td>\n",
+       "      <td>621825230</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>HIXSON</td>\n",
+       "      <td>TN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1000 Feet Project, Inc</td>\n",
+       "      <td>45-00-14</td>\n",
+       "      <td>473820859</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>NEW YORK</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1000 Islands Hose Haulers</td>\n",
+       "      <td>45-38-38</td>\n",
+       "      <td>454570241</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>CARTHAGE</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1004 Foundation, Inc.</td>\n",
+       "      <td>45-00-13</td>\n",
+       "      <td>463110658</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>LONG ISLAND CITY</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>100 BLACK MEN OF LONG ISLAND DEVELOPMENT GROUP...</td>\n",
+       "      <td>20-08-47</td>\n",
+       "      <td>113617702</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>HEMPSTEAD</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>100 BLACKS WHO CARE INC</td>\n",
+       "      <td>06-42-84</td>\n",
+       "      <td>311628801</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>100 BLACK WOMEN OF LONG ISLAND FOUNDATION INC</td>\n",
+       "      <td>05-79-45</td>\n",
+       "      <td>113101805</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>GARDEN CITY</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>100Cameras, Inc.</td>\n",
+       "      <td>43-16-19</td>\n",
+       "      <td>264692506</td>\n",
+       "      <td>NFP</td>\n",
+       "      <td>NEW YORK</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Organization Name  NY Reg #        EIN  \\\n",
+       "0                                  \"Studio 5404\" Inc.  44-39-58  463180470   \n",
+       "1                       \"THEY ARE HAITIAN\" FUND, INC.  20-63-46  300170128   \n",
+       "2   (ASMA) American Syrian Multicultural Associati...  42-84-63  273130182   \n",
+       "3                                   #HicksStrong Inc.  48-10-48  842612081   \n",
+       "4                                #WalkAway Foundation  47-15-80  832820906   \n",
+       "5                                 04/11 10:17 PM test  47-13-95  206256427   \n",
+       "6                                 1/20/21 Action Fund  46-99-13  832210730   \n",
+       "7                             10/40 Connections, Inc.  45-70-15  621825230   \n",
+       "8                              1000 Feet Project, Inc  45-00-14  473820859   \n",
+       "9                           1000 Islands Hose Haulers  45-38-38  454570241   \n",
+       "10                              1004 Foundation, Inc.  45-00-13  463110658   \n",
+       "11  100 BLACK MEN OF LONG ISLAND DEVELOPMENT GROUP...  20-08-47  113617702   \n",
+       "12                            100 BLACKS WHO CARE INC  06-42-84  311628801   \n",
+       "13      100 BLACK WOMEN OF LONG ISLAND FOUNDATION INC  05-79-45  113101805   \n",
+       "14                                   100Cameras, Inc.  43-16-19  264692506   \n",
+       "\n",
+       "   Registrant Type              City State  \n",
+       "0              NFP        MASSAPAQUA    NY  \n",
+       "1              NFP            HUDSON    NY  \n",
+       "2              NFP          BROOKLYN    NY  \n",
+       "3              NFP      CLIFTON PARK    NY  \n",
+       "4              NFP          CARLSBAD    CA  \n",
+       "5              NFP            ALBANY    NY  \n",
+       "6              NFP     SAN FRANCISCO    CA  \n",
+       "7              NFP            HIXSON    TN  \n",
+       "8              NFP          NEW YORK    NY  \n",
+       "9              NFP          CARTHAGE    NY  \n",
+       "10             NFP  LONG ISLAND CITY    NY  \n",
+       "11             NFP         HEMPSTEAD    NY  \n",
+       "12             NFP          BROOKLYN    NY  \n",
+       "13             NFP       GARDEN CITY    NY  \n",
+       "14             NFP          NEW YORK    NY  "
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sQQcYpKhs6Tg"
-      },
-      "source": [
-        "####\n",
-        "#Author: Daniel Strauss\n",
-        "#version 1.0\n",
-        "#references: \n",
-        "#https://www.programiz.com/python-programming/working-csv-files\n",
-        "#https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/s3.html#S3.Client.create_bucket\n",
-        "#https://realpython.com/python-boto3-aws-s3/\n",
-        "#CLI aws s3api create-bucket --bucket my-bucket-name --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2\n",
-        "#https://robertorocha.info/setting-up-a-selenium-web-scraper-on-aws-lambda-with-python/ \n",
-        "##\n",
-        "\n",
-        "###Load libraries\n",
-        "import awscli\n",
-        "import selenium\n",
-        "import boto3\n",
-        "import pandas as pd\n",
-        "import time\n",
-        "\n",
-        "from selenium import webdriver\n",
-        "\n",
-        "\n",
-        "####SCRAPE THE WEBSITE######\n",
-        "###call the webdriver\n",
-        "browser = webdriver.Chrome(\"C:\\Windows/chromedriver.exe\")\n",
-        "\n",
-        "#Path that needs to be accessed by webdriver\n",
-        "browser.get('https://www.charitiesnys.com/RegistrySearch/search_charities.jsp')\n",
-        "\n",
-        "#identify xpath of location to select element\n",
-        "inputElement = browser.find_element_by_xpath(\"/html/body/div/div[2]/div/table/tbody/tr/td[2]/div/div/font/font/font/font/font/font/table/tbody/tr[4]/td/form/table/tbody/tr[2]/td[2]/input[1]\")\n",
-        "inputElement.send_keys('0')\n",
-        "inputElement1 = browser.find_element_by_xpath(\"/html/body/div/div[2]/div/table/tbody/tr/td[2]/div/div/font/font/font/font/font/font/table/tbody/tr[4]/td/form/table/tbody/tr[10]/td/input[1]\").click()\n",
-        "\n",
-        "#identify the table to scrape\n",
-        "table = browser.find_element_by_css_selector('table.Bordered')\n",
-        "\n",
-        "print(table)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sypSZHKWrblY"
-      },
-      "source": [
-        "\n",
-        "#####CREATE DATE FRAME#####\n",
-        "#create empty dataframe\n",
-        "df =[]\n",
-        "\n",
-        "#loop through dataframe to export table\n",
-        "for row in table.find_elements_by_css_selector('tr'):\n",
-        "      cols = df.append([cell.text for cell in row.find_elements_by_css_selector('td')])\n",
-        "\n",
-        "\n",
-        "#update dataframe with header \n",
-        "df = pd.DataFrame(df, columns = [\"Organization Name\", \"NY Reg #\", \"EIN\" ,\"Registrant Type\",\"City\",\"State\"])\n",
-        "# display(df) #let's have a look at the data before creating the CSV file and loading it into s3\n",
-        "\n",
-        "# Removing row with \"None\" values and re-indexing the dataframe\n",
-        "updated_df = pd.DataFrame(df).dropna().reset_index().drop(['index'], axis=1) \n",
-        "\n",
-        "updated_df"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "s5NABYoTs_hP"
-      },
-      "source": [
-        "\n",
-        "###LOAD THE FILE INTO S3####\n",
-        "# prepare csv file name   \n",
-        "pathname = 's3:/yubucket1/'\n",
-        "filename= 'charities_bureau_scrape_' #name of your group\n",
-        "datetime = time.strftime(\"%Y%m%d%H%M%S\") #timestamp\n",
-        "filenames3 = \"%s%s%s.csv\"%(pathname,filename,datetime) #name of the filepath and csv file\n",
-        "\n",
-        "#load file into s3. Pandas actually leverages boto to connect to s3 and can push the file directly into an s3 bucket\n",
-        "updated_df.to_csv(filenames3, header=True, line_terminator='\\n') \n",
-        "\n",
-        "#print success message\n",
-        "print(\"Successfull uploaded file to location:\"+str(filenames3))"
-      ],
-      "execution_count": null,
-      "outputs": []
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-  ]
+   ],
+   "source": [
+    "#####CREATE DATE FRAME#####\n",
+    "#create empty dataframe\n",
+    "df =[]\n",
+    "\n",
+    "#loop through dataframe to export table\n",
+    "for row in table.find_elements_by_css_selector('tr'):\n",
+    "      cols = df.append([cell.text for cell in row.find_elements_by_css_selector('td')])\n",
+    "\n",
+    "\n",
+    "#update dataframe with header \n",
+    "df = pd.DataFrame(df, columns = [\"Organization Name\", \"NY Reg #\", \"EIN\" ,\"Registrant Type\",\"City\",\"State\"])\n",
+    "# display(df) #let's have a look at the data before creating the CSV file and loading it into s3\n",
+    "\n",
+    "# Removing row with \"None\" values and re-indexing the dataframe\n",
+    "updated_df = pd.DataFrame(df).dropna().reset_index().drop(['index'], axis=1) \n",
+    "\n",
+    "updated_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfull uploaded file to location:s3:/yubucket1/charities_bureau_scrape_20210329120724.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "###LOAD THE FILE INTO S3####\n",
+    "# prepare csv file name   \n",
+    "pathname = 's3:/yubucket1/'\n",
+    "filename= 'charities_bureau_scrape_' #name of your group\n",
+    "datetime = time.strftime(\"%Y%m%d%H%M%S\") #timestamp\n",
+    "filenames3 = \"%s%s%s.csv\"%(pathname,filename,datetime) #name of the filepath and csv file\n",
+    "\n",
+    "#load file into s3. Pandas actually leverages boto to connect to s3 and can push the file directly into an s3 bucket\n",
+    "updated_df.to_csv(filenames3, header=True, line_terminator='\\n') \n",
+    "\n",
+    "#print success message\n",
+    "print(\"Successfull uploaded file to location:\"+str(filenames3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
