--- a/script_2_Web_scraping.ipynb
+++ b/script_2_Web_scraping.ipynb
@@ -1302,8 +1302,8 @@
    "source": [
     "###LOAD THE FILE INTO S3####\n",
     "# prepare csv file name   \n",
-    "pathname = 's3:/yubucket1/'\n",
-    "filename= 'charities_bureau_scrape_Part2' #name of your group\n",
+    "pathname = 's3:/DSbucket1/'\n",
+    "filename= 'charities_scrape_Part2' #name of your group\n",
     "datetime = time.strftime(\"%Y%m%d%H%M%S\") #timestamp\n",
     "filenames3 = \"%s%s%s.csv\"%(pathname,filename,datetime) #name of the filepath and csv file\n",
     "\n",
