--- a/script_1_Web_scraping.ipynb
+++ b/script_1_Web_scraping.ipynb
@@ -307,7 +307,7 @@
     "###LOAD THE FILE INTO S3####\n",
     "# prepare csv file name   \n",
     "pathname = 's3:/DSbucket1/'\n",
-    "filename= 'charities_scrape_' #name of your group\n",
+    "filename= 'charities_scrape' #name of your group\n",
     "datetime = time.strftime(\"%Y%m%d%H%M%S\") #timestamp\n",
     "filenames3 = \"%s%s%s.csv\"%(pathname,filename,datetime) #name of the filepath and csv file\n",
     "\n",
