--- a/script_2_Web_scraping.ipynb
+++ b/script_2_Web_scraping.ipynb
@@ -1295,7 +1295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfull uploaded file to location:s3:/DSbucket1/charities_scrape_part2.csv\n"
+      "Successfull uploaded file to location:s3:/DSbucket1/charities_bureau_scrape_Part2.csv\n"
      ]
     }
    ],
@@ -1303,7 +1303,7 @@
     "###LOAD THE FILE INTO S3####\n",
     "# prepare csv file name   \n",
     "pathname = 's3:/DSbucket1/'\n",
-    "filename= 'charities_scrape_Part2' #name of your group\n",
+    "filename= 'charities_bureau_scrape_Part2.csv' #name of your group\n",
     "datetime = time.strftime(\"%Y%m%d%H%M%S\") #timestamp\n",
     "filenames3 = \"%s%s%s.csv\"%(pathname,filename,datetime) #name of the filepath and csv file\n",
     "\n",
